# Tiny-c-compiler

./: CMakeLists.txt  README.md
include/: Lexer.h  Parser.h
src/: CMakeLists.txt  Lexer.cpp  Parser.cpp
